// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/item-icon/ItemIcon render() should render component with additional props 1`] = `
<IconFileAudio
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 2`] = `
<BookmarkIcon
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 3`] = `
<IconFileBoxNote
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 4`] = `
<IconFileCode
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 5`] = `
<IconFileDefault
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 6`] = `
<IconFileDocument
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 7`] = `
<IconFileDwg
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 8`] = `
<IconFileExcelSpreadsheet
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 9`] = `
<IconFolderCollab
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 10`] = `
<IconFolderExternal
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 11`] = `
<IconFolderPersonal
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 12`] = `
<IconFileGoogleDocs
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 13`] = `
<IconFileGoogleSheets
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 14`] = `
<IconFileGoogleSlides
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 15`] = `
<IconFileIllustrator
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 16`] = `
<IconFileImage
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 17`] = `
<IconFileIndesign
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 18`] = `
<IconFileKeynote
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 19`] = `
<IconFileNumbers
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 20`] = `
<IconFilePages
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 21`] = `
<IconFilePDF
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 22`] = `
<IconFilePhotoshop
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 23`] = `
<IconFilePowerpointPresentation
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 24`] = `
<IconFilePresentation
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 25`] = `
<IconFileSpreadsheet
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 26`] = `
<IconFileText
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 27`] = `
<IconFileThreeD
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 28`] = `
<IconFolderPersonal
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 29`] = `
<IconFileVector
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 30`] = `
<IconFileVideo
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 31`] = `
<IconFileWordDocument
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 32`] = `
<IconFileZip
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 33`] = `
<IconFileDefault
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 1`] = `
<IconFileAudio
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 2`] = `
<BookmarkIcon
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 3`] = `
<IconFileBoxNote
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 4`] = `
<IconFileCode
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 5`] = `
<IconFileDefault
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 6`] = `
<IconFileDocument
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 7`] = `
<IconFileDwg
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 8`] = `
<IconFileExcelSpreadsheet
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 9`] = `
<IconFolderCollab
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 10`] = `
<IconFolderExternal
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 11`] = `
<IconFolderPersonal
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 12`] = `
<IconFileGoogleDocs
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 13`] = `
<IconFileGoogleSheets
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 14`] = `
<IconFileGoogleSlides
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 15`] = `
<IconFileIllustrator
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 16`] = `
<IconFileImage
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 17`] = `
<IconFileIndesign
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 18`] = `
<IconFileKeynote
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 19`] = `
<IconFileNumbers
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 20`] = `
<IconFilePages
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 21`] = `
<IconFilePDF
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 22`] = `
<IconFilePhotoshop
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 23`] = `
<IconFilePowerpointPresentation
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 24`] = `
<IconFilePresentation
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 25`] = `
<IconFileSpreadsheet
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 26`] = `
<IconFileText
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 27`] = `
<IconFileThreeD
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 28`] = `
<IconFolderPersonal
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 29`] = `
<IconFileVector
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 30`] = `
<IconFileVideo
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 31`] = `
<IconFileWordDocument
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 32`] = `
<IconFileZip
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 33`] = `
<IconFileDefault
  height={32}
  width={32}
/>
`;
